--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title></title>
-	</head>
-	<body>
-	<h1><center>Christian Pickett Website</center></h1>
-	</body>
-</html>
+my page
