--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-my page
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Christian Pickett</title>
+	</head>
+	<body>
+	<h1><center>Christian Pickett Website - C PICKETT</center></h1>
+	</body>
+</html>
