--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Christian Pickett</title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
 	<h1><center>Christian Pickett Website - C PICKETT</center></h1>
