--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
-	<h1><center>Christian Pickett Website - C PICKETT</center></h1>
+		<h1><center><u>Christian Pickett Website - C PICKETT</u></center></h1>
+
 	</body>
+
 </html>
