--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
-		<h1><center><u>Christian Pickett Website - C PICKETT</u></center></h1>
+		<h1><center>Christian Pickett Website - C PICKETT</center></h1>
 
 	</body>
 
+	<script type="text/javascript" src="jquery-3.2.0.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </html>
